manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __ENVIRONMENT__-__PROJECT_NAME__
  namespace: Aitenzu-cloud
  labels:
    environment: __ENVIRONMENT__
    app: __PROJECT_NAME__
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - __ENVIRONMENT_DOMAIN__
      secretName: __ENVIRONMENT__-__PROJECT_NAME__-tls
  rules:
    - host: __ENVIRONMENT_DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __ENVIRONMENT__-__PROJECT_NAME___frontend
                port:
                  number: 80
